--- a/backend-hotel/composer.json
+++ b/backend-hotel/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.3.14",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
@@ -13,7 +13,6 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
@@ -53,7 +52,16 @@
         }
     },
     "config": {
+        "platform-check": false,
+        "platform": {
+        "php": "8.3.14"
+        },
+        "ignore-platform-reqs": true,
         "optimize-autoloader": true,
+        "exclude-files-from-classmap": [
+            "app/Providers/AppServiceProvider.php",
+            "vendor/laravel/pint/app/Providers/AppServiceProvider.php"
+        ],
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
